argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  tls:
  - hosts:
    - argocd.seattlectf.com
    secretName: argocd-secret
  rules:
  - host: argocd.seattlectf.com
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: 443
        path: /
